# rest-api-client

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish.yml
examples/: json_placeholder.py
src/apix/: __init__.py  client.py  exceptions.py
src/apix/routes/: _models.py  common.py  mixins.py
src/apix/utils/: urls.py
src/rest_api_client/: __init__.py  client.py  exc.py  exceptions.py  routes.py  status_codes.py  types.py
src/rest_api_client/routes/: common.py  mixins.py
src/rest_api_client/utils/: urls.py
src/restic/: __init__.py  client.py  exceptions.py
src/restic/routes/: common.py  mixins.py
src/restic/utils/: urls.py
