[project]
name = "rest-api-client"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "tobasqo", email = "szymon.j.jaskowski@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.2",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = []

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
