[project]
name = "apix"
version = "0.1.0"
readme = "README.md"
authors = [{ name = "tobasqo", email = "szymon.j.jaskowski@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.28.1",
  "pydantic>=2.12.5",
  "typing-extensions>=4.15.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
target-version = "py310"
# extend-exclude = ["examples"]
line-length = 100

[tool.ruff.lint]
extend-select = [
  "ERA",
  "ANN",
  "S",
  "BLE",
  "B",
  "A",
  "COM",
  "C4",
  "FA",
  "ISC",
  "ICN",
  "LOG",
  "G",
  "INP",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SIM",
  "TID",
  "TD",
  "TC",
  "ARG",
  "PTH",
  "I",
  "C90",
  "N",
  "PERF",
  "E",
  "W",
  "F",
  "PL",
  "PLE",
  "PLR",
  "PLW",
  "UP",
  "FURB",
  "RUF",
  "TRY",
]
ignore = [
  "ANN002",
  "ANN003",
  "ANN401",
  "S101",
  "COM812",
  "COM819",
  "LOG002",
  "G002",
  "TD002",
  "TD003",
  "PLR0913",
]

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
# exclude = ["examples"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = false
warn_untyped_fields = true
